2008-12-11  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Folders in bookmarks, closes #549649.
	Sorting entries alphabetically, closes #550596.

2008-11-16  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Drag and drop ability: Bookmark can be added by dragging
	and dropping an tab into it. Closes #536896.

2008-11-14  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Added an initial preferences dialog.

2008-11-14  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Show a secondary text in all error dialogs.

2008-11-14  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-connection.[ch],
	* src/vinagre-tab.c: Better parse a .vnc file. Closes #559525.

2008-11-13  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-connection.[ch],
	* src/vinagre-tab.c,
	* data/vinagre.glade: Allow the username in the authentication schema.
	If an username is required to connect to a host, we ask it in the
	auth dialog, as long as the password. Closes #559526.

2008-11-11  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-window.c (show_hide_accels): Also hides menu mnemonics.
	Closes #555803.

2008-11-11  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-bookmarks.c (vinagre_bookmarks_add): Use the connection's
	name for the default bookmark name, when adding. Closes #557675.
	Patch from Mauro Dreissig.

2008-11-11  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Make avahi optional by adding an option to
	configure script: --disable-avahi. It's enabled by default.
	Closes #557740.

2008-10-20  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: bump to 2.25.1

2008-10-20  Jonh Wendell <jwendell@gnome.org>

	* Lots of files: Added an 'original size' option in the menu.
	Closes #509948.

2008-10-04  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-bookmarks.c (vinagre_bookmarks_init):
	Create the parent directory before copying the old bookmarks file
	to the new location. Closes #554995.

2008-09-22  Jonh Wendell <jwendell@gnome.org>
