@@ -1,5 +1,10 @@
 2008-12-11  Jonh Wendell <jwendell@gnome.org>
 
+	* lots of files: Some adjusts in GObject destructors. Also removed
+	some deprecated gtk+ symbols, closes #563462.
+
+2008-12-11  Jonh Wendell <jwendell@gnome.org>
+
 	* lots of files: Folders in bookmarks, closes #549649.
 	Sorting entries alphabetically, closes #550596.
 
